Bug 156059 - A DOCX has two pages, but should have one
Summary: A DOCX has two pages, but should have one
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 beta1+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:24.2.0 target:7.6.0.2
Keywords: bibisectNotNeeded, filter:docx, regression
Depends on:
Blocks: DOCX-Floatingtable
  Show dependency treegraph
 
Reported: 2023-06-26 11:49 UTC by Mike Kaganski
Modified: 2023-07-10 08:18 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2023-06-26 11:49:36 UTC
Since commit ce3308a926f036b87515b8cd97d2b197063dc77a (tdf#61594 sw floattable: import floating tables as split flys by default, 2023-04-12), bugdoc for tdf#146346 (sw/qa/extras/ooxmlexport/data/tdf146346.docx) opens with two pages instead of one. Unfortunately, the unit test there, testing specifically for the number of pages, didn't catch it because of incorrect implementation of getPages (see https://gerrit.libreoffice.org/c/core/+/153575).

Adding Cc: to Miklos Vajna
Comment 1 Stéphane Guillou (stragu) 2023-06-26 17:28:18 UTC
Confirmed.

Single page in:

Version: 7.5.4.2 (X86_64) / LibreOffice Community
Build ID: 36ccfdc35048b057fd9854c757a8b67ec53977b6
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Two pages in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9fc0b2b9b96d87eb642a3b29e9dcb5d6273265eb
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

OnlyOffice shows one single page.
Office.com doesn't show the footnote tables whatsoever.
Comment 2 Commit Notification 2023-07-06 07:20:06 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9ac864159b241d2093e86f664ab6f4b76c69196d

tdf#156059 sw floattable: fix lost 0 bottom margin of anchor in ftn from DOCX

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Stéphane Guillou (stragu) 2023-07-07 08:26:12 UTC
Fix verified. Back to one page in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 77fca616e0bd79e0b405fd0b3543cf8e94e15df3
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thanks!
Comment 4 Commit Notification 2023-07-10 08:18:27 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/6b93852a88140706561171dc75c0ebf6ddecf256

tdf#156059 sw floattable: fix lost 0 bottom margin of anchor in ftn from DOCX

It will be available in 7.6.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.